--- a/index.html
+++ b/index.html
@@ -4,9 +4,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.min.js" integrity="sha384-cVKIPhGWiC2Al4u+LWgxfKTRIcfu0JTxR+EQDz/bgldoEyl4H0zUF0QKbrJ0EcQF" crossorigin="anonymous"></script>
     <title>CRUD APP</title>
 </head>
 <body>
-    <h1>Hola Mundo</h1>
+
+    <section class="master">
+        <div class="background_header">
+            <p class="text_header_uno">20% DESCUENTO con CÓDIGO PROMOCIONAL: BIXDAY10</p> 
+            <p class="text_header_dos">ENVÍO GRATIS en pedidos SUPERIORES A $50 USD.</p>
+            <p class="text_header_tres">COMPRA AHORA!</p>
+        </div>
+
+        <div class="d-flex flex-row-reverse bd-highlight">
+            <div class="dropdown telefono">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                +57 3193619557
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+
+            <a id="dropdownMenuButton1" class="btn btn-primary"  href="#" role="button">admin@bixday.com</a>
+        </div>
+        </div>
+
+        <div class="barra_buscador">
+            <nav class="navbar navbar-light">
+                <div class="d-flex .justify-content-between container">
+                  <a class="navbar-brand logo_bixday" href="./index.html">
+                    <img src="./Assets/Header/Logo_Bixday.png" alt="">
+                  </a>
+
+                  <div class="mb-2 buscador">
+                    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Busca productos, códigos y más">
+                </div>
+                
+                <div class="d-flex flex-row-reverse bd-highlight barra">
+                    <a class="navbar-brand" href="./index.html">
+                      <img src="./Assets/Header/Login.png" alt="" width="70" height="70">
+                    </a>
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./Assets/Header/SHopping_Bag.png" alt="" width="70" height="70">
+                      </a>
+                      <a class="navbar-brand" href="./index.html">
+                        <img src="./Assets/Header/Favoritos.png" alt="" width="70" height="70">
+                      </a>
+                  </div>
+                </div>
+            </nav>
+        </div>
+    </section>
+
+
+    
+    <script src="./javascript.js"></script>
 </body>
 </html>
