Creacion barra menu

--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                 <li><a class="dropdown-item" href="#">Action</a></li>
+                <img src="../Assets/Index/Header/PC.png" width="400" height="100" alt="">
                 <li><a class="dropdown-item" href="#">Another action</a></li>
               <li><a class="dropdown-item" href="#">Something else here</a></li>
             </ul>
@@ -61,6 +62,24 @@
         </div>
     </section>
 
+    <div class="container">
+        <h1>Mi cuenta</h1>
+        <p class="text_principal">¡Gracias por elegir nuestra aplicación CRUD! Esperamos que disfrutes de todas las ventajas que ofrece y que te ayude a optimizar la gestión de tus datos. ¡Comienza a crear, leer, actualizar y eliminar con facilidad y eficiencia!</p>
+    </div>
+    
+    <section class="container menu">
+        <ul class="nav justify-content-around">
+            <a class="navbar-brand" href="./index.html">
+                <img src="./Assets/Header/Agregar Cliente.png" alt="" width="70" height="70">
+              </a>
+              <a class="navbar-brand" href="./index.html">
+                <img src="./Assets/Header/Agregar Productos.png" alt="" width="70" height="70">
+              </a>
+              <a class="navbar-brand" href="./index.html">
+                <img src="./Assets/Header/Proveedor.png" alt="" width="70" height="70">
+              </a>
+          </ul>
+    </section>
 
     
     <script src="./javascript.js"></script>
