Arreglo de BUGS e implementacion de codigo en Productos

--- a/Clientes/clientes.html
+++ b/Clientes/clientes.html
@@ -111,7 +111,7 @@
       </div>
       <div class="btn_formulario d-flex align-items-center justify-content-center">
         <button type="submit" class="btn btn-primary" id="btn_guardar" onclick="addData()">Guardar</button>
-        <button type="submit" class="btn btn-primary" id="btn_actualizar">Editar</button>
+        <button type="submit" class="btn btn-primary" id="btn_actualizar">Actualizar</button>
       </div>
     </form>
   </div>
