--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         </div>
         <div class="card-body">
           <h2 class="card-title">Bienvenido!</h2>
-          <p class="card-text">En este sitio web podras ingresar datos de clientes, productos y proveedores donde todos sus dartos estaran seguros y protegidos, puedes agregar, editar y eliminar los datos ingresados a tu gusto.</p>
+          <p class="card-text">En este sitio web podras ingresar datos de clientes, productos y proveedores donde todos sus datos estaran seguros y protegidos, puedes agregar, editar y eliminar los datos ingresados a tu gusto.</p>
           <a href="#" class="btn btn-primary">Iniciar Sesión</a>
         </div>
       </div>
