--- a/Clientes/clientes.html
+++ b/Clientes/clientes.html
@@ -21,55 +21,53 @@
 
   <section class="master">
     <div class="background_header">
-      <p class="text_header_uno">20% DESCUENTO con CÓDIGO PROMOCIONAL: BIXDAY10</p>
-      <p class="text_header_dos">ENVÍO GRATIS en pedidos SUPERIORES A $50 USD.</p>
-      <p class="text_header_tres">COMPRA AHORA!</p>
+      <p class="text_header_uno">CUENTA PREMIUM BIXDAY CRUD</p>
+        <p class="text_header_dos">20% DESCUENTO con CÓDIGO PROMOCIONAL: BIXDAY10</p>
+        <p class="text_header_tres">COMPRA AHORA!</p>
     </div>
 
     <div class="d-flex flex-row-reverse bd-highlight">
-      <div class="dropdown telefono">
-        <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1"
-          data-bs-toggle="dropdown" aria-expanded="false">
-          +57 3193619557
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-          <li><a class="dropdown-item" href="#">Action</a></li>
-          <img src="../Assets/Index/Header/PC.png" width="400" height="100" alt="">
-          <li><a class="dropdown-item" href="#">Another action</a></li>
-          <li><a class="dropdown-item" href="#">Something else here</a></li>
+        <div class="dropdown telefono">
+            <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+            Contáctanos
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+            <li><a class="d-flex justify-content-center dropdown-item" href="https://web.whatsapp.com"> Whatsapp</a></li>
+            <li><a class="d-flex justify-content-center dropdown-item" href="https://www.instagram.com">Instagram</a></li>
+            <li><a class="d-flex justify-content-center dropdown-item" href="https://www.facebook.com/bixdaystore">Facebook</a></li>
+            <img src="../Assets/Body/Welcome.avif" width="350" height="100" alt="">
         </ul>
 
-        <a id="dropdownMenuButton1" class="btn btn-primary" href="#" role="button">admin@bixday.com</a>
-      </div>
+        <a id="dropdownMenuButton1" class="btn btn-primary"  href="https://www.gmail.com" role="button">admin@bixday.com</a>
+    </div>
     </div>
 
     <div class="barra_buscador">
-      <nav class="navbar navbar-light">
-        <div class="d-flex .justify-content-between container">
-          <a class="navbar-brand logo_bixday" href="../index.html">
-            <img src="../Assets/Header/Logo_Bixday.png" alt="">
-          </a>
+        <nav class="navbar navbar-light">
+            <div class="d-flex .justify-content-between container">
+              <a class="navbar-brand logo_bixday" href="./index.html">
+                <img src="../Assets/Header/Logo_Bixday.png" alt="">
+              </a>
 
-          <div class="mb-2 buscador">
-            <input type="text" class="form-control" id="formGroupExampleInput"
-              placeholder="Busca productos, códigos y más">
-          </div>
-
-          <div class="d-flex flex-row-reverse bd-highlight barra">
-            <a class="navbar-brand" href="./index.html">
-              <img src="../Assets/Header/Login.png" alt="" width="70" height="70">
-            </a>
-            <a class="navbar-brand" href="./index.html">
-              <img src="../Assets/Header/SHopping_Bag.png" alt="" width="70" height="70">
-            </a>
-            <a class="navbar-brand" href="./index.html">
-              <img src="../Assets/Header/Favoritos.png" alt="" width="70" height="70">
-            </a>
-          </div>
-        </div>
-      </nav>
+              <div class="mb-2 buscador">
+                <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Busca productos, códigos y más">
+            </div>
+            
+            <div class="d-flex flex-row-reverse bd-highlight barra">
+                <a class="navbar-brand" href="../Iniciar Sesion/login.html">
+                  <img src="../Assets/Header/Login.png" alt="" width="70" height="70">
+                </a>
+                <a class="navbar-brand" href="./index.html">
+                    <img src="../Assets/Header/SHopping_Bag.png" alt="" width="70" height="70">
+                  </a>
+                  <a class="navbar-brand" href="./index.html">
+                    <img src="../Assets/Header/Favoritos.png" alt="" width="70" height="70">
+                  </a>
+              </div>
+            </div>
+        </nav>
     </div>
-  </section>
+</section>
 
   <div class="container">
     <h1>Clientes</h1>
