--- a/Iniciar Sesion/login.html
+++ b/Iniciar Sesion/login.html
@@ -12,29 +12,33 @@
 </head>
 
 <body>
-    <img src="../Assets/Header/Logo_Bixday.png" width="50" alt="img_logo">
 
-    <div class="d-flex justify-content-center subtitulo">
+    <div class="header">
+        <img src="../Assets/Header/Logo_Bixday.png" width="50" alt="img_logo">
         <h1>Hola,</h1>
-        <p>Bienvenido</p>
+        <p class="subtitulo">Bienvenido</p>
     </div>
 
-    <div class="d-flex justify-content-center">
+    <div class="container d-flex justify-content-center">
         <form class="login">
             <div class="mb-3">
                 <label for="exampleInputEmail1" class="form-label">Correo Electronico</label>
-                <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+                <input type="email" class="form-control" id="inputEmail" aria-describedby="emailHelp">
             </div>
             <div class="mb-3">
                 <label for="exampleInputPassword1" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="exampleInputPassword1">
+                <input type="password" class="form-control" id="inputContraseña">
             </div>
-            <div class="d-flex justify-content-center form-check">
-                <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+            <div class="form-check text_login">
+                <div id="emailHelp" class="form-text">¿Aún no tienes cuenta en BixDay CRUD?</div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
+            <div class="d-flex justify-content-center btn_login">
+                <button type="submit" class="btn btn-primary" onclick="login()">Iniciar Sesión</button>
+                <button type="submit" class="btn btn-primary" onclick="login()">Crear Cuenta</button>
+            </div>
         </form>
     </div>
 </body>
 
+<script src="./login.js"></script>
 </html>
